--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <a class="login-link" href="#">LOGIN</a>
         </div>
     </nav>
-    
+    <!-- carouse starts -->
 
     <div class="carousel-container">
     <div class="carousel">
