--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
             <img src="https://www.1zoom.me/big2/11/92056-ksyu.jpg" alt="">
         </div>
     </div>
-</div></body>
+</div>
+<!-- carouse ends -->
+<div class="video-cards-container">
+    
+</div>
+</body>
 
 </html>
