--- a/index.html
+++ b/index.html
@@ -105,8 +105,18 @@
     </div>
 </div>
 <!-- carouse ends -->
-<div class="video-cards-container">
-    
+<div class="fotter">
+<div class="links">
+        <a href="#">AboutDisney+Hotstar</a>
+        <a href="#">Terms of use</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">FAQ</a>
+        <a href="#">Feedback</a>
+        <a href="#">Careers</a>
+    </div>
+    <div class="content">
+        <p>2021 STAR. All Rights Reserved. HBO, Home Box Office and all related channel and programming logos are service marks of, and all related programming visuals and elements are the property of, Home Box Office, Inc. All rights reserved.</p>
+    </div>
 </div>
 </body>
 
