--- a/index.html
+++ b/index.html
@@ -94,30 +94,49 @@
     <!-- carouse starts -->
 
     <div class="carousel-container">
-    <div class="carousel">
-        <div class="slider">
-            <div class="slide-content">
-                <h1 class="movie-title">Iron-Man</h1>
-                <p class="movie-des">American superhero film based on the Marvel Comics character of the same name. ... In the film, following his escape from captivity by a terrorist group, world famous industrialist and master engineer Tony Stark builds a mechanized suit of armor and becomes the superhero Iron Man.</p>
+        <div class="carousel">
+            <div class="slider">
+                <div class="slide-content">
+                    <h1 class="movie-title">Iron-Man</h1>
+                    <p class="movie-des">American superhero film based on the Marvel Comics character of the same name.
+                        ... In the film, following his escape from captivity by a terrorist group, world famous
+                        industrialist and master engineer Tony Stark builds a mechanized suit of armor and becomes the
+                        superhero Iron Man.</p>
+                </div>
+                <img src="https://www.1zoom.me/big2/11/92056-ksyu.jpg" alt="">
             </div>
-            <img src="https://www.1zoom.me/big2/11/92056-ksyu.jpg" alt="">
         </div>
     </div>
-</div>
-<!-- carouse ends -->
-<div class="fotter">
-<div class="links">
-        <a href="#">AboutDisney+Hotstar</a>
-        <a href="#">Terms of use</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">FAQ</a>
-        <a href="#">Feedback</a>
-        <a href="#">Careers</a>
+    <!-- carouse ends -->
+    <div class="fotter">
+        <div class="links">
+            <a href="#">About Disney+Hotstar</a>
+            <a href="#">Terms of use</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">FAQ</a>
+            <a href="#">Feedback</a>
+            <a href="#">Careers</a>
+        </div>
+        <div class="social">
+            <p>Contact with us</p>
+            <p class="dis">Disney+ Hotstar App</p>
+        </div>
+        <div class="content">
+            <p>2021 STAR. All Rights Reserved. HBO, Home Box Office and all related channel and programming logos are
+                service <br> marks of, and all related programming visuals and elements are the property of, Home Box
+                Office, Inc. All rights reserved.</p>
+
+        </div>
+        <div class="social-logo">
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-twitter-square"></i>
+
+        </div>
+     <div class="play">
+ <img src="https://miro.medium.com/max/600/1*nZu0dsnlCQltPT1QMCHFAA.png" alt="">
+ <img src="https://miro.medium.com/max/600/1*xqT83bMEz92IBYxS9UQNow.png" alt="">
     </div>
-    <div class="content">
-        <p>2021 STAR. All Rights Reserved. HBO, Home Box Office and all related channel and programming logos are service marks of, and all related programming visuals and elements are the property of, Home Box Office, Inc. All rights reserved.</p>
     </div>
-</div>
 </body>
 
 </html>
