--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         industrialist and master engineer Tony Stark builds a mechanized suit of armor and becomes the
                         superhero Iron Man.</p>
                 </div>
-                <img src="https://www.1zoom.me/big2/11/92056-ksyu.jpg" alt="">
+                <img src="images/ironman.jpg" alt="">
             </div>
         </div>
     </div>
@@ -137,6 +137,8 @@
  <img src="https://miro.medium.com/max/600/1*xqT83bMEz92IBYxS9UQNow.png" alt="">
     </div>
     </div>
+    <script src="movie.js"></script>
+    <script src="run.js"></script>
 </body>
 
 </html>
