--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         industrialist and master engineer Tony Stark builds a mechanized suit of armor and becomes the
                         superhero Iron Man.</p>
                 </div>
-                <img src="images/ironman.jpg" alt="">
+                <img src="images/slider1.jpg" alt="">
             </div>
         </div>
     </div>
