--- a/index.html
+++ b/index.html
@@ -412,6 +412,21 @@
     </div>
 
 
+<div class="mobile-footer">
+    <li><i class="fas fa-home"></i>
+    <h6>Home</h6></li>
+
+    <li><i class="fas fa-tv"></i>
+        <h6>Tv</h6> </li>
+  
+        <img class="fott-logo" src="https://campaigns.hotstar.com/test-directory/disney-hotstar-logo.png" alt="">
+
+    <li><i class="fas fa-film"></i>
+        <h6>Movies</h6></li>
+
+    <li><i class="fas fa-futbol"></i>
+        <h6>Sports</h6></li>
+</div>
 
 
 
