--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
 
             </div>
-            <a href="#">Disney+</a>
+            <a style="font-size: medium;" href="#"> Disney+</a>
 
             <a href="#"><b style="color: gold;">KIDS</b></a>
 
@@ -98,8 +98,8 @@
             <div class="slider">
                 <div class="slide-content">
                     <h1 class="movie-title">Bolt</h1>
-                    <p class="movie-des">An animation adventure movie about the canine 
-                        star of a fictional Sci-Fi action show that believes his powers are real and 
+                    <p class="movie-des">An animation adventure movie about the canine
+                        star of a fictional Sci-Fi action show that believes his powers are real and
                         embarks on a cross-country trek to save his co-star from a threat.</p>
                 </div>
                 <img src="images/slider 1.0.jpg" alt="">
@@ -223,7 +223,7 @@
             <video src="videos/geographic.mp4" mute loop class="card-video"></video>
         </div>
     </div>
-    
+
 
 
 
@@ -324,7 +324,7 @@
 
 
 
-    <h1 class="title"><b>Best Of Marvels</b></h1>
+    <h1 class="title"><b>Best Of Cartoon</b></h1>
     <div class="movies-list">
         <button class="pre-btn"><img src="images/pre.png" alt=""></button>
         <button class="nxt-btn"><img src="images/nxt.png" alt=""></button>
@@ -412,21 +412,25 @@
     </div>
 
 
-<div class="mobile-footer">
-    <li><i class="fas fa-home"></i>
-    <h6>Home</h6></li>
+    <div class="mobile-footer">
+        <li><i class="fas fa-home"></i>
+            <h6>Home</h6>
+        </li>
 
-    <li><i class="fas fa-tv"></i>
-        <h6>Tv</h6> </li>
-  
+        <li><i class="fas fa-tv"></i>
+            <h6>Tv</h6>
+        </li>
+
         <img class="fott-logo" src="https://campaigns.hotstar.com/test-directory/disney-hotstar-logo.png" alt="">
 
-    <li><i class="fas fa-film"></i>
-        <h6>Movies</h6></li>
+        <li><i class="fas fa-film"></i>
+            <h6>Movies</h6>
+        </li>
 
-    <li><i class="fas fa-futbol"></i>
-        <h6>Sports</h6></li>
-</div>
+        <li><i class="fas fa-futbol"></i>
+            <h6>Sports</h6>
+        </li>
+    </div>
 
 
 
