--- a/index.html
+++ b/index.html
@@ -246,7 +246,8 @@
             </div>
         </div>
     </div>
-            <!-- ------------------------------------------------------------------------------ -->
+            <!-- ------------------------------first line ends---------------------------- -->
+            <!-- ------------------------------movie cards---------------------------- -->
            
 
     <h1 class="title"><b> Best of Entertainment </b></h1>
@@ -273,7 +274,7 @@
         </div>
     </div>
 
-
+<!-- ------------------------------movie cards ends---------------------------- -->
 
 
 
@@ -556,26 +557,38 @@
         </div>
     </div>
 
+
+    <!-- mobile footer----------------------------------------------- -->
     <div class="mobile-footer">
+
+        <div class="gap">
         <li><i class="fas fa-home"></i>
             <h6>Home</h6>
         </li>
-
+    </div>
+     
+    <div class="gap">
         <li><i class="fas fa-tv"></i>
             <h6>Tv</h6>
         </li>
+    </div>
 
+    <div class="gap">
         <img class="fott-logo" src="https://campaigns.hotstar.com/test-directory/disney-hotstar-logo.png" alt="">
+    </div>
 
+    <div class="gap">
         <li><i class="fas fa-film"></i>
             <h6>Movies</h6>
         </li>
+    </div>
 
+    <div class="gap">
         <li><i class="fas fa-futbol"></i>
             <h6>Sports</h6>
         </li>
     </div>
-
+</div>
 
 
 
