--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
         <div class="content">
             <p>2021 STAR. All Rights Reserved. HBO, Home Box Office and all related channel and programming logos are
                 service <br> marks of, and all related programming visuals and elements are the property of, Home Box
-                Office, Inc. All rights reserved.</p>
+                Office, Inc. All rights Reserved.</p>
 
         </div>
         <div class="social-logo">
