--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="logo">
             <img src="https://campaigns.hotstar.com/test-directory/disney-hotstar-logo.png" alt="">
         </div>
-        <div class="title">
+        <div class="navebar-title">
             <div class="dropdown">
                 <div class="dropbtn"><a href="#">Tv</a>
                     <div class="dropdown-content">
