--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <a href="#"> star Barath</a>
                         <a href="#"> Asianet</a>
                         <a href="#"> Star Maa</a>
-                        <a href="#"> more...</a>
+                        <a href="#"> more....</a>
 
                     </div>
                 </div>
