--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>DisneyPlus-Hotstar-Clone</title>
     <link rel="stylesheet" href="hotstar.css">
     <script src="https://kit.fontawesome.com/ff56a8dc40.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/1c7e477026.js" crossorigin="anonymous"></script>
 
 </head>
 
